nextcloud/overlays/kind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  template:
    spec:
      containers:
      - name: nextcloud
        livenessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders: &headers
            - name: Host
              value: nextcloud.local
          initialDelaySeconds: 30
          timeoutSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders: *headers
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 300Mi
