nextcloud/overlays/kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  ingressClassName: nginx
  tls:
    - secretName: nextcloud-cert
      hosts:
        - &host nextcloud.local
  rules:
    - host: *host
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  name: http
            path: /
            pathType: Prefix
